# gpt-oss

./: CMakeLists.txt  MANIFEST.in  pyproject.toml
examples/agents-sdk-python/: example.py
examples/gradio/: gradio_chat.py
examples/streamlit/: streamlit_chat.py
gpt-oss-mcp-server/: browser_server.py  build-system-prompt.py  python_server.py  reference-system-prompt.py
gpt_oss/: __init__.py  chat.py  generate.py  tokenizer.py
gpt_oss/evals/: __init__.py  __main__.py  abcd_grader.py  aime_eval.py  basic_eval.py  chat_completions_sampler.py  gpqa_eval.py  healthbench_eval.py  report.py  responses_sampler.py  types.py
gpt_oss/metal/: __init__.py
gpt_oss/metal/examples/: chat.py  generate.py
gpt_oss/metal/include/: gpt-oss.h
gpt_oss/metal/include/gpt-oss/: functions.h  macros.h  types.h
gpt_oss/metal/python/: context.c  model.c  module.c  module.h  tokenizer.c
gpt_oss/metal/scripts/: create-local-model.py
gpt_oss/metal/source/: accumulate.metal  convert.metal  embeddings.metal  expert_routing_metadata.metal  gather_and_accumulate.metal  matmul.metal  moematmul.metal  random.metal  rmsnorm.metal  rope.metal  sample.metal  scatter.metal  sdpa.metal  topk.metal
gpt_oss/metal/source/include/internal/: datatype.h  log.h  macros.h  math.h  model.h  rng.h  storage.h
gpt_oss/responses_api/: api_server.py  events.py  serve.py  types.py  utils.py
gpt_oss/responses_api/inference/: metal.py  ollama.py  stub.py  transformers.py  triton.py  vllm.py
gpt_oss/tools/: __init__.py  apply_patch.py  tool.py
gpt_oss/tools/python_docker/: docker_tool.py
gpt_oss/tools/simple_browser/: __init__.py  backend.py  page_contents.py  simple_browser_tool.py
gpt_oss/torch/: __init__.py  model.py  utils.py  weights.py
gpt_oss/triton/: __init__.py  attention.py  model.py  moe.py
gpt_oss/vllm/: token_generator.py
